# hif-frontend

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: documentation.yml  ubuntu.yml
cmake/: FindHIF.cmake
examples/: full_adder.v  full_adder.vhdl
grammar/: verilog.lex  verilog.yxx  vhdl.lex  vhdl.yxx
include/verilog2hif/: lexor_keyword.hpp  mark_ams_language.hpp  parse_line.hpp  parser_struct.hpp  post_parsing_methods.hpp  support.hpp  verilog_parser.hpp
include/vhdl2hif/: vhdl2hifParseLine.hpp  vhdl_parser.hpp  vhdl_parser_struct.hpp  vhdl_post_parsing_methods.hpp  vhdl_support.hpp
src/verilog2hif/: FixDescription_1.cpp  FixDescription_2.cpp  FixDescription_3.cpp  lex_wrapper.cpp  mark_ams_language.cpp  verilog2hif.cpp  verilog2hif_parse_line.cpp  verilog_parser.cpp  verilog_parser_extension.cpp  verilog_parser_struct.cpp  verilog_support.cpp
src/vhdl2hif/: PostParsingVisitor_fixRanges.cpp  PostParsingVisitor_step1.cpp  PostParsingVisitor_step2.cpp  VhdlParser.cpp  VhdlParser_extension.cpp  VhdlParser_psl.cpp  lex_wrapper.cpp  vhdl2hif.cpp  vhdl2hifParseLine.cpp  vhdl_support.cpp
